# libchess

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs  board_initialization_1.rs  boards_initialization_2.rs  game_initialization.rs  making_moves_1.rs  making_moves_2.rs
examples/pgn_data/: game1.pgn  game2.pgn
src/: bitboard.rs  bitboards.rs  board_builders.rs  board_file.rs  board_files.rs  board_moves.rs  board_rank.rs  board_ranks.rs  castling.rs  chess_board_builder.rs  chess_boards.rs  chess_moves.rs  color.rs  colors.rs  coordinates.rs  errors.rs  game_history.rs  games.rs  lib.rs  peace_moves.rs  piece.rs  pieces.rs  square.rs  squares.rs  utils.rs  zobrist.rs
src/boards/: bitboards.rs  board_builders.rs  board_files.rs  board_moves.rs  board_ranks.rs  chess_boards.rs  coordinates.rs  mod.rs  squares.rs  zobrist.rs
src/move_masks/: between.rs  bishops.rs  kings.rs  knights.rs  mod.rs  pawns.rs  queens.rs  rays.rs  rooks.rs
