[package]
name = "libchess"
version = "0.8.2"
edition = "2021"
authors = ["Stanislav Khristoforov <stanislav.khristoforov@ya.ru>"]
description = "Rust environment for the game of chess. Can be used as a basis for your own engine"
keywords = ["game", "rust", "chess", "chess-game", "chess-board"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/khristoforovs/libchess"

[dependencies]
colored = "2.1.0"
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.11.1"
textwrap = "0.16.1"
thiserror = "2.0.0"
